--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,23 @@ networks:
     driver: bridge
       
 services:
+  jmeter:
+    build: .
+    depends_on:
+      - influx
+    entrypoint: ["/entrypoint.sh", "-n", "-Jproject_name=sdhsdh", "-Jtest_name=dfhdfh", "-t Project1/project1_example_test.jmx"]
+    deploy:
+      resources:
+        limits:
+          cpus: '3.0'
+          memory: 3512M
   grafana:
     image: kirillyu/jmeter-reports:grafana
     deploy:
         resources:
             limits:
               cpus: '1.0'
-              memory: 3512M
+              memory: 1024M
     ports:
       - '3000:3000'
     environment:
@@ -19,20 +29,20 @@ services:
       GF_RENDERING_CALLBACK_URL: http://grafana:3000/
       GF_LOG_FILTERS: debug
 
-  renderer:
-    image: grafana/grafana-image-renderer:latest
-    deploy:
-        resources:
-            limits:
-              cpus: '1.0'
-              memory: 3512M
-    environment:
-        RENDERING_VERBOSE_LOGGING: 'true'
-        LOG_LEVEL: debug
-        ENABLE_METRICS: 'true'
-        IGNORE_HTTPS_ERRORS: 'true'
-    ports:
-      - '8081:8081'
+  #renderer:
+  #  image: grafana/grafana-image-renderer:latest
+  #  deploy:
+  #      resources:
+  #          limits:
+  #            cpus: '1.0'
+  #            memory: 3512M
+  #  environment:
+  #      RENDERING_VERBOSE_LOGGING: 'true'
+  #      LOG_LEVEL: debug
+  #      ENABLE_METRICS: 'true'
+  #      IGNORE_HTTPS_ERRORS: 'true'
+  #  ports:
+  #    - '8081:8081'
 
   influx:
     image: kirillyu/jmeter-reports:influxdb
